jUDDI integration